Implement YouTube transcripts loader

--- a/langchain/.gitignore
+++ b/langchain/.gitignore
@@ -301,6 +301,9 @@ document_loaders/web/serpapi.d.ts
 document_loaders/web/sort_xyz_blockchain.cjs
 document_loaders/web/sort_xyz_blockchain.js
 document_loaders/web/sort_xyz_blockchain.d.ts
+document_loaders/web/youtube.cjs
+document_loaders/web/youtube.js
+document_loaders/web/youtube.d.ts
 document_loaders/fs/directory.cjs
 document_loaders/fs/directory.js
 document_loaders/fs/directory.d.ts
