--- a/langchain/package.json
+++ b/langchain/package.json
@@ -313,6 +313,9 @@
     "document_loaders/web/sort_xyz_blockchain.cjs",
     "document_loaders/web/sort_xyz_blockchain.js",
     "document_loaders/web/sort_xyz_blockchain.d.ts",
+    "document_loaders/web/youtube.cjs",
+    "document_loaders/web/youtube.js",
+    "document_loaders/web/youtube.d.ts",
     "document_loaders/fs/directory.cjs",
     "document_loaders/fs/directory.js",
     "document_loaders/fs/directory.d.ts",
@@ -685,7 +688,8 @@
     "typesense": "^1.5.3",
     "usearch": "^1.1.1",
     "vectordb": "^0.1.4",
-    "weaviate-ts-client": "^1.4.0"
+    "weaviate-ts-client": "^1.4.0",
+    "youtube-transcript": "^1.0.6"
   },
   "peerDependencies": {
     "@aws-crypto/sha256-js": "^5.0.0",
@@ -757,7 +761,8 @@
     "typesense": "^1.5.3",
     "usearch": "^1.1.1",
     "vectordb": "^0.1.4",
-    "weaviate-ts-client": "^1.4.0"
+    "weaviate-ts-client": "^1.4.0",
+    "youtube-transcript": "^1.0.6"
   },
   "peerDependenciesMeta": {
     "@aws-crypto/sha256-js": {
@@ -962,6 +967,9 @@
       "optional": true
     },
     "weaviate-ts-client": {
+      "optional": true
+    },
+    "youtube-transcript": {
       "optional": true
     }
   },
@@ -1523,6 +1531,11 @@
       "types": "./document_loaders/web/sort_xyz_blockchain.d.ts",
       "import": "./document_loaders/web/sort_xyz_blockchain.js",
       "require": "./document_loaders/web/sort_xyz_blockchain.cjs"
+    },
+    "./document_loaders/web/youtube": {
+      "types": "./document_loaders/web/youtube.d.ts",
+      "import": "./document_loaders/web/youtube.js",
+      "require": "./document_loaders/web/youtube.cjs"
     },
     "./document_loaders/fs/directory": {
       "types": "./document_loaders/fs/directory.d.ts",
